--- a/web/application/admin/view/product/edit.html
+++ b/web/application/admin/view/product/edit.html
@@ -166,7 +166,7 @@
                                                                         
                                                                     {/volist}
                                                                     </select>
-                                                                    <input type="hidden" value="{$selectVal}" name="update_spec[category][{$nname}][]">
+                                                                    <input type="hidden" value="{$selectVal??''}" name="update_spec[category][{$nname}][]">
                                                                 {/volist}
                                                             </td>
                                                             <td>
@@ -267,13 +267,18 @@
                                 </div>
                             </div>
                             <div class="card-footer col-md-offset-2">
-                                <input type="hidden" name="audit_state" class="js_audit_state" value="1">
                                 <input type="hidden" name="min_price" class="js_min_price" value="0">
                                 <input type="hidden" name="max_price" class="js_max_price" value="0">
                                 <input type="hidden" name="is_price_neg_at_phone" class="js_math_is_price_neg_at_phone" value="0">
                                 <input type="hidden" name="product_id" value="{$row.id}">
+                                {if condition="$row.audit_state eq 5"}
+                                <input type="hidden" name="audit_state" class="js_audit_state" value="2">
+                                <button type="button" class="btn btn-primary js_release">修改</button>
+                                {else/}
+                                <input type="hidden" name="audit_state" class="js_audit_state" value="1">
                                 <button type="button" class="btn btn-primary js_draft">存为草稿</button>
                                 <button type="button" class="btn btn-primary js_release">发布</button>
+                                {/if}
                                 <small class="submit-tip" style="padding-top: 6px;padding-left: 5px;color: #a94442"></small>
                             </div>
                         </form>
