--- a/web/application/admin/view/spec_category/index.html
+++ b/web/application/admin/view/spec_category/index.html
@@ -37,7 +37,7 @@
 
                     <div class="card-body">
                         <div style="line-height:20px; margin:20px;padding-left: 15px">
-                            <input class="form-check-input" value="1" {if $color == 1}checked="checked"{/if}  id="color" name="color" class="input_checkbox" type="checkbox">&nbsp;&nbsp;颜色
+                            <input class="form-check-input" value="1" {if $color == 1}checked="checked"{/if}  id="color" name="color" class="input_checkbox" type="checkbox">&nbsp;&nbsp;规格
                         </div>
                         <fieldset id="diy_option_div" class="card-body" style="display: block;border: 1px #CCCCCC solid;border-radius: 5px;">
                             <div class="col-md-4">
