--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -64,9 +64,9 @@
                    'managerIcon'=> 'fa-feed',
                    'managerUrl' => url('admin/suggestion/index'),
                    'managerVal' => [   ['name'=>'商品交易报表','url'=>url('admin/report/trade'),'icon'=>'fa-database'],
-                                       ['name'=>'供应商交易报表','url'=>url('admin/product/listpass'),'icon'=>'fa-database'],
-                                       ['name'=>'采购商交易报表','url'=>url('admin/product/listpass'),'icon'=>'fa-database'],
-                                       ['name'=>'订单数据报表','url'=>url('admin/product/listpass'),'icon'=>'fa-database'],
+                                       ['name'=>'供应商交易报表','url'=>url('admin/report/supplier'),'icon'=>'fa-database'],
+                                       ['name'=>'采购商交易报表','url'=>url('admin/report/buyer'),'icon'=>'fa-database'],
+                                       ['name'=>'订单数据报表','url'=>url('admin/report/order'),'icon'=>'fa-database'],
                                        ['name'=>'企业注册认证数据','url'=>url('admin/report/company'),'icon'=>'fa-database']
                                    ]
                   ]
