--- a/web/application/admin/view/report/trade.html
+++ b/web/application/admin/view/report/trade.html
@@ -26,21 +26,24 @@
                         <h3 class="card-title">商品交易报表</h3>
                     </div>
                     <div class="row" style="padding-top: 15px;padding-right: 15px">
-                        <div class="col-md-6">
-                            <form class="form-inline ml-3" action="{:url()}"  method="get">
-                                <div class="input-group">
-
-                                </div>&nbsp;&nbsp;
-                                <div class="input-group">
-                                    <input class="form-control form-control-navbar"  name="k" type="search"  value="" placeholder="留言/手机号" aria-label="Search">
-                                    <div class="input-group-append">
+                        <div class="col-md-12">
+                            <div class="col-md-9">
+                                <form class="form-inline" action="{:url()}"  method="get">
+                                    <div class = "input-group">
+                                        <input type = "date"  name="start" class = "form-control"  value="{$start}" placeholder="开始日期">
+                                        <span style="display: inline-block;vertical-align: middle;padding-top: 5px"><hr /></span>
+                                        <input type = "date" name="end" class = "form-control" value="{$end}" placeholder="结束日期">
+                                    </div>&nbsp;
+                                    <div class="input-group">
+                                        <input class="form-control form-control-navbar"  name="title" type="text"  value="{$title}" placeholder="商品名称" aria-label="Search">
+                                        <input class="form-control form-control-navbar"  name="sku" type="text"  value="{$sku}" placeholder="SKU编码" aria-label="Search">
                                         <button class="btn btn-primary" id="search" type="submit">查找</button>
                                     </div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-md-6">
-
+                                </form>
+                            </div>
+                            <div class="col-md-2">
+                                <a class="btn btn-primary pull-right"  target="_blank"  href="{:url('admin/report/trade_export',['start'=>$start,'end'=>$end,'title'=>$title,'sku'=>$sku])}" >导出</a>
+                            </div>
                         </div>
                     </div>
                     <!-- /.card-header -->
@@ -48,7 +51,7 @@
                         <table id="example2" class="table table-bordered table-hover">
                             <thead>
                             <tr>
-                                <th width="150px">序号</th>
+                                <th width="80px">序号</th>
                                 <th width="150px">日期</th>
                                 <th>SKU编码</th>
                                 <th>商品名称</th>
@@ -65,7 +68,7 @@
                                 <td>{$trade.order_date}</td>
                                 <td>{$trade.sku_code}</td>
                                 <td>{$trade.title}</td>
-                                <td>商品规格</td>
+                                <td>{$trade.s_info}</td>
                                 <td>{$trade.amount}</td>
                                 <td>{$trade.total_price}</td>
                                 <td>{$trade.avgPrice}</td>
