--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -61,13 +61,13 @@
                     'managerVal' => [['name'=>'新增商品','url'=>url('admin/product/create'),'icon'=>'fa-database'],['name'=>'草稿','url'=>url('admin/product/listDraft'),'icon'=>'fa-database'],['name'=>'待审核','url'=>url('admin/product/listPending'),'icon'=>'fa-database'],['name'=>'已审核','url'=>url('admin/product/listpass'),'icon'=>'fa-database']]
                 ],[
                    'managerKey' => '数据报表',
-                   'managerIcon'=> 'fa-feed',
+                   'managerIcon'=> 'fa-bar-chart',
                    'managerUrl' => url('admin/suggestion/index'),
                    'managerVal' => [   ['name'=>'商品交易报表','url'=>url('admin/report/trade'),'icon'=>'fa-database'],
-                                       ['name'=>'供应商交易报表','url'=>url('admin/report/supplier'),'icon'=>'fa-database'],
-                                       ['name'=>'采购商交易报表','url'=>url('admin/report/buyer'),'icon'=>'fa-database'],
-                                       ['name'=>'订单数据报表','url'=>url('admin/report/order'),'icon'=>'fa-database'],
-                                       ['name'=>'企业注册认证数据','url'=>url('admin/report/company'),'icon'=>'fa-database']
+                                       ['name'=>'供应商交易报表','url'=>url('admin/report/supplier'),'icon'=>'fa-cubes'],
+                                       ['name'=>'采购商交易报表','url'=>url('admin/report/buyer'),'icon'=>'fa-shopping-cart'],
+                                       ['name'=>'订单数据报表','url'=>url('admin/report/order'),'icon'=>'fa-reorder'],
+                                       ['name'=>'企业注册认证数据','url'=>url('admin/report/company'),'icon'=>'fa-check']
                                    ]
                   ]
             ],
