--- a/web/application/admin/view/report/company.html
+++ b/web/application/admin/view/report/company.html
@@ -1,7 +1,18 @@
 {include file="layout/header" title="$title" keywords="" /}
 <link rel="stylesheet" href="__STATIC__/js/plugins/bootstrapvalidator/css/bootstrapValidator.css"/>
 {include file="layout/left" groupId="$groupId" keywords="" /}
-<!-- Content Wrapper. Contains page content -->
+<style type="text/css">
+    hr{
+        width: 10px;
+        border: 1px solid #ced4da;
+        margin-left: 2px;
+        margin-right: 2px;
+    }
+    input[type="date"]:before{
+        color:#A9A9A9;
+        content:attr(placeholder);
+    }
+</style>
 <div class="content-wrapper">
     <div class="content-header">
         <div class="container-fluid">
@@ -12,7 +23,7 @@
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">企业认证</li>
+                        <li class="breadcrumb-item active">企业认证认证数据</li>
                     </ol>
                 </div><!-- /.col -->
             </div><!-- /.row -->
@@ -23,21 +34,28 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">企业认证</h3>
+                        <h3 class="card-title">企业认证认证数据</h3>
                     </div>
                     <div class="row" style="padding-top: 15px;padding-right: 15px">
                         <div class="col-md-8">
                             <form class="form-inline ml-3" action="{:url()}"  method="get">
-                                <div class = "input-group">
-                                    <input type = "date"  name="start" class = "form-control"  value="{$start}" placeholder="开始日期">
-                                    <span style="display: inline-block;vertical-align: middle;padding-top: 5px"><hr /></span>
-                                    <input type = "date" name="end" class = "form-control" value="{$end}" placeholder="结束日期">
-                                </div>&nbsp;
-
-                                <div class="input-group" style="min-width: 280px">
-                                    <input class="form-control form-control-navbar"  name="k" type="search"  value="{$k}" placeholder="手机号" aria-label="Search">
+                                <div class="form-group">
+                                    <label style="font-weight: normal;">注册时间：</label>
+                                    <div class = "input-group" style="padding-right: 15px">
+                                        <input type = "date"  name="start" class = "form-control"  value="{$start}" placeholder="开始日期">
+                                        <span style="display: inline-block;vertical-align: middle;padding-top: 5px"><hr /></span>
+                                        <input type = "date" name="end" class = "form-control" value="{$end}" placeholder="结束日期">
+                                    </div>&nbsp;
+                                </div>
+                                <div class="form-group">
+                                    <label style="font-weight: normal;">注册手机：</label>
+                                    <div class="input-group" style="min-width: 280px;padding-right: 15px">
+                                        <input class="form-control form-control-navbar"  name="k" type="search"  value="{$k}" placeholder="" aria-label="Search">
+                                    </div>
+                                </div>
+                                <div class="form-group">
                                     <div class="input-group-append">
-                                        <button class="btn btn-primary" id="search" type="submit">查找</button>
+                                        <button class="btn btn-primary" id="search" type="submit">搜索</button>
                                     </div>
                                 </div>
                             </form>
