--- a/web/application/admin/view/report/supplier.html
+++ b/web/application/admin/view/report/supplier.html
@@ -1,7 +1,18 @@
 {include file="layout/header" title="供应商交易报表" keywords="" /}
 
 {include file="layout/left" groupId="$groupId" keywords="" /}
-<!-- Content Wrapper. Contains page content -->
+<style type="text/css">
+    hr{
+        width: 10px;
+        border: 1px solid #ced4da;
+        margin-left: 2px;
+        margin-right: 2px;
+    }
+    input[type="date"]:before{
+        color:#A9A9A9;
+        content:attr(placeholder);
+    }
+</style>
 <div class="content-wrapper">
     <div class="content-header">
         <div class="container-fluid">
@@ -26,25 +37,30 @@
                         <h3 class="card-title">供应商交易报表</h3>
                     </div>
                     <div class="row" style="padding-top: 15px;padding-right: 15px">
-                        <div class="col-md-8">
+                        <div class="col-md-9">
                             <form class="form-inline ml-3" action="{:url()}"  method="get">
-                                <div class = "input-group">
-                                    <input type = "date"  name="start" class = "form-control"  value="{$start}" placeholder="开始日期">
-                                    <span style="display: inline-block;vertical-align: middle;padding-top: 5px"><hr /></span>
-                                    <input type = "date" name="end" class = "form-control" value="{$end}" placeholder="结束日期">
+                                <div class="form-group">
+                                    <label style="font-weight: normal;">日期：</label>
+                                    <div class="input-group" style="padding-right: 15px">
+                                        <input type = "date"  name="start" class = "form-control"  value="{$start}" placeholder="开始日期">
+                                        <span style="padding-top: 5px"><hr /></span>
+                                        <input type = "date" name="end" class = "form-control" value="{$end}" placeholder="结束日期">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label style="font-weight: normal;">供应商：</label>
+                                    <div class="input-group" style="padding-right: 15px">
+                                        <input class="form-control form-control-navbar"  name="k" type="search"  value="" placeholder="" aria-label="Search">
+                                    </div>
                                 </div>
                                 <div class="input-group">
-
-                                </div>&nbsp;&nbsp;
-                                <div class="input-group">
-                                    <input class="form-control form-control-navbar"  name="k" type="search"  value="" placeholder="供应商" aria-label="Search">
                                     <div class="input-group-append">
-                                        <button class="btn btn-primary" id="search" type="submit">查找</button>
+                                        <button class="btn btn-primary" id="search" type="submit">搜索</button>
                                     </div>
                                 </div>
                             </form>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <a class="btn btn-primary pull-right"  target="_blank"  href="{:url('admin/report/supplier_export',['start'=>$start,'end'=>$end,'k'=>$k])}" >导出</a>
                         </div>
                     </div>
