--- a/web/application/admin/view/report/company.html
+++ b/web/application/admin/view/report/company.html
@@ -93,11 +93,16 @@
                                 <td>{$company.reg_role}</td>
                                 <td>{:date('Y-m-d',$company.reg_time)}</td>
                                 <td>{$company.legal_representative}</td>
-                                <td>{$company.contact_point}</td>
+                                <td>{$company.contact}</td>
                                 <td>{$company.ent_phone}</td>
                                 <td>{:date('Y-m-d',$company.edit_time)}</td>
                                 <td>{:getCertificationStatus($company.status)} </td>
-                                <td>{:date('Y-m-d',$company.edit_time)}</td>
+                                <td>
+                                    {if $company.audit_time gt 0}
+                                    {:date('Y-m-d',$company.audit_time)}
+                                    {else /}
+                                    {/if}
+                                </td>
                             </tr>
                             {/volist}
                             </tbody>
