--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -57,12 +57,12 @@
                 ],[
                     'managerKey' => '商品管理',
                     'managerIcon'=> 'fa-feed',
-                    'managerUrl' => url('admin/suggestion/index'),
+                    'managerUrl' => '#',
                     'managerVal' => [['name'=>'新增商品','url'=>url('admin/product/create'),'icon'=>'fa-database'],['name'=>'草稿','url'=>url('admin/product/listDraft'),'icon'=>'fa-database'],['name'=>'待审核','url'=>url('admin/product/listPending'),'icon'=>'fa-database'],['name'=>'已审核','url'=>url('admin/product/listpass'),'icon'=>'fa-database']]
                 ],[
                    'managerKey' => '数据报表',
                    'managerIcon'=> 'fa-bar-chart',
-                   'managerUrl' => url('admin/suggestion/index'),
+                   'managerUrl' => '#',
                    'managerVal' => [   ['name'=>'商品交易报表','url'=>url('admin/report/trade'),'icon'=>'fa-database'],
                                        ['name'=>'供应商交易报表','url'=>url('admin/report/supplier'),'icon'=>'fa-cubes'],
                                        ['name'=>'采购商交易报表','url'=>url('admin/report/buyer'),'icon'=>'fa-shopping-cart'],
