--- a/web/application/admin/view/spec_category/index.html
+++ b/web/application/admin/view/spec_category/index.html
@@ -28,55 +28,41 @@
                 <div class="card">
                     <div class="card-header">
                         <h3 class="card-title">
-                            {foreach name="postion" id="posti"}
-                            {$posti.name}
-                            {if $key != count($postion)-1}&nbsp;>{/if}
-                            {/foreach}
+                            <h3 class="card-title">类型规格管理</h3>
                         </h3>
                     </div>
 
-                    <div class="card-body">
-                        <div style="line-height:20px; margin:20px;padding-left: 15px">
-                            <input class="form-check-input" value="1" {if $color == 1}checked="checked"{/if}  id="color" name="color" class="input_checkbox" type="checkbox">&nbsp;&nbsp;规格
+                    <div class="row" style="padding-top: 15px;padding-right: 15px">
+                        <div class="col-md-6">
                         </div>
-                        <fieldset id="diy_option_div" class="card-body" style="display: block;border: 1px #CCCCCC solid;border-radius: 5px;">
-                            <div class="col-md-4">
-                                <div class="input-group">
-                                    自定义规格名称 &nbsp;&nbsp;
-                                    <div class="input-group-append">
-                                        <input class="form-control" value="{$specAttrKey}" id="option_name" name="option_name" type="text">
-                                    </div>
-                                </div>
-                            </div>
-                            <br />
-
-                            <div class="table_scroll"><table class="table table-striped table-bordered table-hover dataTable no-footer" role="grid" style="width:98%" cellspacing="0" cellpadding="0">
-                                <thead>
-                                <tr>
-                                    <td>规格选项</td>
-                                    <td style="text-align:left;" width="30%"><span class="operation_icon">&nbsp;</span>操作</td>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {foreach name="details" id="option"}
-                                <tr>
-                                    <td>{$option.spec_option_text}</td>
-                                    <td>
-                                        <a href="#"  class="btn btn-sm btn-primary" data-id="{$option.id}" data-name="{$option.spec_option_text}" data-shop="0" data-toggle="modal" data-target="#edit-modal">编辑</a>
-                                        <a href="#" class="btn btn-sm btn-danger" data-id="{$option.id}" data-toggle="modal" data-target="#delete-modal">删除</a>
-                                    </td>
-                                </tr>
-                                {/foreach}
-                                </tbody>
-                                <tfoot>
-                                <tr>
-                                    <td colspan="4">
-                                        <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#create-modal">新增</button>
-                                    </td>
-                                </tr>
-                                </tfoot>
-                            </table></div>
-                        </fieldset>
+                        <div class="col-md-6">
+                            <button class="btn btn-primary pull-right" data-toggle="modal" data-id="0" data-name=""  data-option="{}" data-target="#create-modal">新增</button>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <table id="example2" class="table table-bordered table-hover">
+                            <thead>
+                            <tr>
+                                <th>规格名称</th>
+                                <th>规格选项</th>
+                                <th>操作</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {volist name='list' id='specKey'}
+                            <tr>
+                                <td>{$specKey.spec_attr_key}</td>
+                                <td>{$specKey.optionInfo}</td>
+                                <td>
+                                    <a href="javascript:void(0)"  class="btn btn-sm btn-primary"  data-id="{$specKey.id}"  data-name="{$specKey.spec_attr_key}" data-option='{$specKey.optionJson}'  data-toggle="modal"   data-target="#create-modal">编辑</a>
+                                    <a href="javascript:void(0)"  class="btn btn-sm btn-danger"  data-id="{$specKey.id}" data-toggle="modal" data-target="#delete-modal">删除</a>
+                                </td>
+                            </tr>
+                            {/volist}
+                            </tbody>
+                            <tfoot>
+                            </tfoot>
+                        </table>
                     </div>
                 </div>
             </div>
@@ -88,7 +74,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">新增规格选项</h5>
+                <h5 class="modal-title">规格设置</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -99,8 +85,26 @@
                         <div class="col-md-12">
                             <form role="form" class="" id="add-form">
                                 <div class="form-group">
-                                    <label >规格选项</label>
-                                    <input type="text" class="form-control" name="name" placeholder="">
+                                    <label >规格名称</label>
+                                    <input type="text" class="form-control" name="specKeyName"  maxlength="20" id="specKeyName" placeholder="">
+                                    <input type="hidden"  name="specKeyId"   id="specKeyId" value="" />
+                                </div>
+                                <div class="form-group">
+                                    <input type="button" value="添加规格"  onclick="addSpec();"/>
+                                </div>
+                                <div class="form-group">
+                                    <div class="table-responsive">
+                                        <table class="table table-condensed">
+                                            <thead>
+                                            <tr>
+                                                <th>规格值(非重复)</th>
+                                                <th>操作</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody id="spec_box">
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
                             </form>
                         </div>
@@ -115,42 +119,10 @@
     </div>
 </div>
 
-
-<div class="modal fade" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">修改规格选项</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body ">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <form role="form" class="" id="edit-form">
-                                <div class="form-group">
-                                    <label >规格选项</label>
-                                    <input type="text" class="form-control" name="name" placeholder="">
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                <button type="button" class="btn btn-primary" id="edit-request">保存</button>
-            </div>
-        </div>
-    </div>
-</div>
-
 <div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-body">是否确认删除该Banner?</div>
+            <div class="modal-body">是否确认删除该规格?</div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">否</button>
                 <button type="button" class="btn btn-primary" data-id="" id="delete-request">是</button>
@@ -160,49 +132,66 @@
 </div>
 
 {include file="layout/footer" title="$title" keywords="" /}
-<script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
+
+<script id="option-template" type="text/html">
+    <tr>
+        <td>
+            <input style="display:show;" type="text" class="form-control spec_option" maxlength="20" name="showText[]" value="{{name}}" pattern="required">
+        </td>
+        <td><i class="fa fa-trash-o" style="cursor: pointer" title="删除"></i></td>
+    </tr>
+</script>
+
 <script type="text/javascript" src="__STATIC__/js/plugins/bootstrapvalidator/js/bootstrapValidator.js"></script>
+<script type="text/javascript" src="__STATIC__/js/template-web.js"></script>
 <script type="text/javascript">
+
+    function addSpec() {
+        var data = {name:''};
+        var html = template('option-template',data);
+        $('#spec_box').append(html);
+    }
+
     var url = '{:url("admin/product_category/index")}';
     $('a[href="'+url+'"]').addClass('active');
     $('a[href="'+url+'"]').parent().parent().parent().addClass('menu-open');
     $(function () {
-        $('#color').change(function () {
-            var value = $(this).prop('checked');
-            $.ajax({
-                url:"{:url('admin/spec_category/set')}",
-                type:'post',
-                data:{id:"{$categoryId}",value:value==true ? 1 : 0,field:'color'},
-                dataType:'json',
-                success:function (data) {
-                    if(data.status == 1){
-                        alert(data.msg);
-                        $("#color").prop('checked',!value);
-                    }
-                }
-            });
-        });
-        $("#option_name").blur(function () {
-            var value = $(this).val();
-            $.ajax({
-                url:"{:url('admin/spec_category/set')}",
-                type:'post',
-                data:{id:"{$categoryId}",value:value,field:'option'},
-                dataType:'json',
-                success:function (data) {
-                    if(data.status == 1){
-                        alert(data.msg);
-                    }
-                }
-            });
+        $('#create-modal').on('show.bs.modal', function (event) {
+            $('#spec_box').html('');
+            var obj = $(event.relatedTarget);
+            $("#specKeyId").val(obj.data('id'));
+            $("#specKeyName").val(obj.data('name'));
+            //获取option数据
+            var options = obj.data('option');
+            var html = '';
+            for(var i =0; i< options.length;i++){
+                html += template('option-template',{name:options[i]});
+            }
+            $('#spec_box').append(html);
         });
         $("#add-request").click(function () {
-            var id = $(this).data('id');
-            if(id <= 0){
+            //验证数据
+            var name = $('#specKeyName').val();
+            if(name == ''){
+                alert('规格名称不能为空');
                 return;
             }
+            var validate = true;
+            var length = 0;
+            $("#spec_box").find('tr>td>.spec_option').each(function () {
+               var val = $(this).val();
+               if(val == ''){
+                   validate = false;
+               }
+               length++;
+            });
+            if(validate == false || length == 0 ){
+                alert('规格值不能为空或必须填写');
+                return;
+            }
+
             $.ajax({
-                url:"{:url('admin/spec_category/create')}&categoryId="+"{$categoryId}",
+                url:"{:url('admin/spec_category/edit')}&categoryId="+"{$categoryId}",
                 type:'post',
                 data: $("#add-form").serialize(),
                 dataType:'json',
@@ -215,33 +204,9 @@
                 }
             })
         });
-        $('#edit-modal').on('show.bs.modal', function (event) {
-            var obj = $(event.relatedTarget);
-            var id = obj.data('id');
-            $("#edit-request").data('id',id);
-            $("#edit-form").find("input[name=\"name\"]").val(obj.data('name'));
-            $("#edit-form").find("input[name=\"sequence\"]").val(obj.data('sequence'));
-            $("#edit-form").find("input[name=\"shop_id\"]").val(obj.data('shop'));
-        });
-        $("#edit-request").click(function () {
-            var id = $(this).data('id');
-            if(id <= 0){
-                return;
-            }
-            $.ajax({
-                url:"{:url('admin/spec_category/edit')}&id="+id,
-                type:'post',
-                data: $("#edit-form").serialize(),
-                dataType:'json',
-                success:function (data) {
-                    if(data.status == 0){
-                        window.location.reload();
-                    }else{
-                        alert(data.msg);
-                    }
-                }
-            })
-        });
+
+
+
         $('#delete-modal').on('show.bs.modal', function (event) {
             var id = $(event.relatedTarget).data('id');
             $("#delete-request").data('id',id);
@@ -264,6 +229,9 @@
                     }
                 }
             })
+        });
+        $(document).delegate('.fa-trash-o','click',function () {
+            $(this).closest('tr').remove();
         });
     });
 </script>
